--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,30 +1,90 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "variables";
 
-*{
+* {
   margin: 0;
   padding: 0;
-  transition: .3s all;
+  transition: 0.3s all;
 }
 
-body{
-  font-family: 'inter';
+body {
+  font-family: "inter";
   font-size: 16px;
   font-weight: 400;
-  line-height: 27px;
   color: #999999;
+  line-height: 27px;
   background-color: #1f1f1f;
-  padding: 0 20px;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-li{
+li {
   list-style: none;
 }
 
-img{
+img {
   width: 100%;
 }
 
+h1 {
+  font-family: $font;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 300;
+  color: white;
+  span {
+    color: $green;
+  }
+}
+
+h2,
+h3 {
+  font-family: $font;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300;
+  color: white;
+}
+
+h4 {
+  font-family: $font;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+  color: white;
+}
+
+main {
+  display: flex;
+  padding: 0 20px;
+}
+
+.container{
+  margin: 90px 0 68px 0;
+}
+
+.portfolio-container {
+width: 100%;
+margin: auto;
+padding: 0 100px;}
+
+@media screen and (max-width: 1220px) {
+  main {
+    flex-direction: column;
+    padding: 0;
+  }
+  .portfolio-container {
+    max-width: 707px;
+    margin: auto;
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 584px) {
+  h1 {
+    font-size: 38px;
+    line-height: 53px;
+  }
+}
