--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,11 @@
   transition: 0.3s all;
 }
 
+html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 100px;
+}
+
 body {
   font-family: "inter";
   font-size: 16px;
