fix: typography adjustment in textarea for contact form

--- a/src/styles/components/ContactForm.scss
+++ b/src/styles/components/ContactForm.scss
@@ -33,6 +33,8 @@
       outline: none;
       line-height: 31px;
       padding-bottom: 3px;
+      font-family: 'inter';
+      
     }
     textarea {
       resize: vertical;
