--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,34 @@
   transition: 0.3s all;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #747474;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #666666;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #666666;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e1e1e1;
+}
+
+::-webkit-scrollbar-track:hover,
+::-webkit-scrollbar-track:active {
+  background-color: #d4d4d4;
+}
+
+
 html{
   scroll-behavior: smooth;
   scroll-padding-top: 100px;
