fix:Visual adjustment in resume section.

--- a/src/styles/components/Resume.scss
+++ b/src/styles/components/Resume.scss
@@ -12,6 +12,7 @@
       line-height: 27px;
       color: #9999;
       margin-bottom: 28px;
+      font-weight: 400;
     }
     p{
       font-size: 13px;
