--- a/src/styles/components/ProfileSidebar.scss
+++ b/src/styles/components/ProfileSidebar.scss
@@ -24,7 +24,7 @@
     margin-bottom: 46px;
     max-height: 210px;
     img {
-      filter: grayscale(100%);
+      // filter: grayscale(100%);
     }
   }
   h2 {
